--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,20 @@
         <item>Others</item>
     </string-array>
     />
+    //Languuage
+    <string name="choose">Choose your language</string>
+    <string name="arabic">العربيه</string>
+    <string name="english">English</string>
+    <string name="con">Confirm</string>
+
+    //onboarding
+    <string name="title">Discounts on all stores</string>
+    <string name="body1">Lots of discount at different rates</string>
+    <string name="body2">from all stores and brands.All of this</string>
+    <string name="body3">is available to us</string>
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
+
+
 
 </resources>
