--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    //Login
     <string name="app_name">StudentApp</string>
     <string name="welcome">Welcome back!</string>
     <string name="missed">You’ve been missed</string>
@@ -12,7 +11,6 @@
     <string name="password">Password</string>
     <string name="student">Student</string>
     <string name="parent">Parent</string>
-    //Register
     <string name="name">Name</string>
     <string name="phone">Phone Number</string>
     <string name="Confirm_password">Confirm Password</string>
@@ -20,7 +18,7 @@
     <string name="gender">Select Gender</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
-    //forget
+
     <string name="forgot">Forgot password!</string>
     <string name="code_phone">We will send code to your phone</string>
     <string name="send">Send OTP</string>
@@ -38,14 +36,11 @@
     <string name="haveAn"> have an account? </string>
     <string name="please">Please don’t forget this one too</string>
     <string name="changed_pass">Your password changed sucsessfully </string>
-    />
-    //Languuage
     <string name="choose">Choose your language</string>
     <string name="arabic">العربيه</string>
     <string name="english">English</string>
     <string name="con">Confirm</string>
 
-    //onboarding
     <string name="title">Discounts on all stores</string>
     <string name="body1">Lots of discount at different rates</string>
     <string name="body2">from all stores and brands.All of this</string>
@@ -55,6 +50,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="today_quiz">Today quizzes</string>
+    <string name="latest_files">latest files</string>
+    <string name="no_quiz">There is no quiz today</string>
 
 
 </resources>
