--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="visit">Visit Done</string>
     <string name="name">Name</string>
     <string name="phone">Phone Number</string>
+    <string name="photo">Photo</string>
+    <string name="Upload_photo">Upload Photo</string>
     <string name="Confirm_password">Confirm Password</string>
 
     <string name="gender">Select Gender</string>
@@ -26,7 +28,7 @@
     <string name="code_phone">We will send code to your phone</string>
     <string name="send">Send OTP</string>
     <string name="verification">Verification code</string>
-    <string name="confirm">Confirm</string>
+    <string name="confirm">Confirm</string>F
     <string name="new_pass">New Password</string>
     <string name="save">Save</string>
     <string name="home">Home</string>
@@ -44,6 +46,8 @@
     <string name="haveAn"> have an account? </string>
     <string name="please">Please don’t forget this one too</string>
     <string name="changed_pass">Your password changed sucsessfully </string>
+    <string name="saved_pass">Your password saved sucsessfully </string>
+    <string name="edit_pass">Edit Password </string>
     <string name="choose">Choose your language</string>
     <string name="successfully_sent">Your answers have been sent successfully and your grade</string>
     <string name="arabic">العربيه</string>
@@ -74,6 +78,8 @@
     <string name="contact">Contact Us</string>
     <string name="logout">Log out</string>
     <string name="Privacy">Privacy Policy</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
